--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
+    "supabase": "^1.51.0",
     "typescript": "^4.9.5"
   },
   "engines": {
