Supabase Auth Helpers with cookies

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
     "@remix-run/vercel": "^1.15.0",
+    "@supabase/auth-helpers-remix": "^0.1.9",
     "@supabase/supabase-js": "^2.21.0",
     "@vercel/node": "^2.10.3",
     "isbot": "^3.6.8",
